Details
-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 5.0.0
-
None
-
Yocto, GDB 8.0.0
-
-
6c4c310278eb65a4adc2647be6d5765023bfa875 (qt-creator/tqtc-qt-creator/master)
Description
When using a variable Debugger Helper Customization in Options -> Debugger -> Locals & Expressions it is not expanded.
My setting
set solib-search-path %{ActiveProject:BuildConfig:Path}/debug handle SIGSTOP pass nostop noprint
After starting debugging of application on yocto hardware the debugger is started when displaying this message
Listening on port 10000 Remote debugging from host xxxxxxx Process /opt/simpad/bin/rcgui created; pid = 19025 Could not load shared library symbols for 13 libraries, e.g. /opt/simpad/lib/xxxxxxxx.so.99. Use the "info sharedlibrary" command to see the complete listing. Do you need "set solib-search-path" or "set sysroot"?QML debugging is enabled. Only use this in a safe environment.
In debugger log:
executing cmd: show solib-search-path
<596show solib-search-path >&"show solib-search-path\n" >~"The search path for loading non-absolute shared library symbol files is %{ActiveProject:BuildConfig:Path}/debug.\n" >596^done
Attachments
For Gerrit Dashboard: QTCREATORBUG-26261 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
370880,2 | Debugger: Expand Variables in Debugging Helper Customization | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |