Debugger: Expand Variables in Debugging Helper Customization

Fixes: QTCREATORBUG-26261
Change-Id: Ie034e3b170bad2ccd4aaa4c004c8eeeebeeaff87
Reviewed-by: Karsten Sperling Opdal <karsten.s.opdal@gmail.com>
Reviewed-by: hjk <hjk@qt.io>